Add Developer API profile, and some other improvements to pom.xml